# agentic-rag

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
agent/: __init__.py  agent.py  cli.py  config.py  llm.py  tools.py
graph/: graph.py  state.py
graph/chains/: answer_grader.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/nodes/: generate.py  retrieve.py  web_search.py
